--- a/src/pages/buyer-profile/buyer-profile.scss
+++ b/src/pages/buyer-profile/buyer-profile.scss
@@ -36,4 +36,8 @@ page-buyer-profile {
     .list {
         margin-bottom: 100px;
     }
+    .btn-edit{
+        width: 90%;
+        margin: 15px auto;
+    }
 }
