--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -35,4 +35,9 @@ page-profile {
 
     .card:last-child{ margin-bottom: 70px;}
 
+    .btn-edit{
+        width: 90%;
+        margin: 15px auto;
+    }
+
 }
