--- a/src/pages/order-list/order-list.scss
+++ b/src/pages/order-list/order-list.scss
@@ -75,8 +75,8 @@ page-order-list {
     // }
 
     .item ion-avatar img{
-        height: auto;
-        width: 40px;
+        height: 75px;
+        width: 60px;
         border-radius: 0;
     }
 
@@ -136,5 +136,11 @@ page-order-list {
                 color: #FF9800;
             }
         }
+    }
+    h5{color: #ffa900;}
+
+    .ion-md-star:before {
+    
+        color: orange!important;
     }
 }
