--- a/src/pages/payment-successful/payment-successful.scss
+++ b/src/pages/payment-successful/payment-successful.scss
@@ -21,6 +21,12 @@ page-payment-successful {
     .item{ padding-bottom: 16px;}
     .item.item-block .item-inner{ border-bottom: 0 !important;}
     
-    
+    .card-md {
+        margin-bottom: 20px !important;
+    }
+    .button{
+        margin: 20px 5% 20px;
+    width: 90%;
+    }
     
 }
