--- a/src/pages/signupone/signupone.scss
+++ b/src/pages/signupone/signupone.scss
@@ -117,5 +117,26 @@ page-signupone {
     background-color: #32db64 !important;
    border-radius: 100% !important;
 }
-.item-checkbox.item.item-block .item-inner{border:0 !important;}
+.item-checkbox.item.item-block .item-inner{border:0 !important
+    ;
+}
+
+.item-md {
+  
+    font-size: 1.1rem;
+    font-weight: normal;
+    text-transform: none;
+    color: #000;
+    
+}
+
+.text-input-md {
+    margin: 9px 0px;
+}
+
+.store
+{
+    margin-bottom: 0px;
+    margin-top: 21px;
+}
 }
