--- a/src/pages/add-product/add-product.scss
+++ b/src/pages/add-product/add-product.scss
@@ -12,7 +12,7 @@ page-add-product {
     
     .content{ background: #f5f5f5; }
     .list{ padding: 0 15px 15px;}
-    .list .item{background-color: transparent; margin-bottom: 0; border-bottom: 1px solid #d0d0d0; font-size: 1.6rem;}
+    .list .item{background-color: transparent; margin-bottom: 0; font-size: 1.6rem;}
     .list .row .col .item{border-bottom: 1px solid #d0d0d0;}
     .list > .item-block:first-child{ border-top:0;}
     .list .item-input:last-child{ border-bottom: 0;}
