--- a/src/pages/forgot-password/forgot-password.scss
+++ b/src/pages/forgot-password/forgot-password.scss
@@ -11,9 +11,9 @@ page-forgot-password {
 	.text-input-ios, .text-input-md{text-align:center; font-weight:300}
 	
 	
-	input[type="text"]::-webkit-input-placeholder, input[type="password"]::-webkit-input-placeholder {color: #fff;}
+	input[type="text"]::-webkit-input-placeholder, input[type="password"]::-webkit-input-placeholder {color:gray;}
 	input[type="text"]::-moz-placeholder, input[type="password"]::-moz-placeholder {color: #fff;}
 	input[type="text"]:-ms-input-placeholder, input[type="password"]:-ms-input-placeholder {color: #fff;}
 	input[type="text"]:-moz-placeholder, input[type="password"]:-moz-placeholder {color: #fff;}
-	ion-input{color: #fff;}
+	ion-input{color: #060606;}
 }
