--- a/src/pages/buyer-profile/buyer-profile.scss
+++ b/src/pages/buyer-profile/buyer-profile.scss
@@ -40,4 +40,12 @@ page-buyer-profile {
         width: 90%;
         margin: 15px auto;
     }
+
+    .item-md ion-thumbnail img {
+        width: 80px;
+        height: 80px;
+       
+    }
+        
+
 }
