--- a/src/pages/edit-profile/edit-profile.scss
+++ b/src/pages/edit-profile/edit-profile.scss
@@ -10,7 +10,7 @@ page-edit-profile {
         -moz-box-shadow: 0px 0px 5px 0px rgba(227,218,227,1);
         box-shadow: 0px 0px 5px 0px rgba(227,218,227,1);
         background: #fff;
-        text-transform: capitalize;
+        // text-transform: capitalize;
         width: 100%;
         border: none;
     }
