--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -60,4 +60,7 @@ page-home {
       .toolbar-title-ios{
         padding: 0 30px;
       }
+      .home-list-row{
+          width: 100%;
+      }
 }
